# pelican-alias

./: README.rst  alias.py  pyproject.toml
pelican/plugins/alias/: __init__.py  alias.py
