[tool.poetry]
name = "pelican-alias"
version = "1.2"
description = "Pelican plugin for creating alias pages"
authors = ["Christopher Williams <chris@christopher-williams.net>"]
license = "MIT"
readme = "README.rst"
keywords = ["pelican", "plugin", "url"]
repository = "https://github.com/artur-shaik/pelican-alias"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python,
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
